web page made successfully

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
         
         <div class="intro">
             <div class="container text-center">
-                <img class="profile-image" src="./index_files/profile-image.png" alt="">
-                <h1 class="name">Tarun Mahajan</h1>
-                <div class="title">Software Developer</div>
+                <!-- <img class="profile-image" src="./index_files/profile-image.png" alt=""> -->
+                <!-- <h1 class="name">Tarun Mahajan</h1> -->
+                <h1 class="name">This sight is under-development</h1>
+                <h2>For any queries, you can drop me a mail at tarunm201412@gmail.com</h2>
+                <!-- <div class="title">Software Developer</div>
                 <div class="profile">
                     <p>Profile info goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet.</p>
-                </div><!--//profile-->
+                </div> --><!--//profile-->
             </div><!--//container-->
         </div><!--//intro-->
         
