--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="creative, fullscreen, business, photography, portfolio, one page, bootstrap responsive, start-up, ui/ux, html5, css3, studio, branding, creative design, multipurpose, parallax, personal, masonry, grid, coming soon, carousel, career">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Arcon. - Multipurpose HTML5 Template</title>
+<title>Hi. I am Tarun Mahajan</title>
 <link rel="shortcut icon" href="index_files/images/favicon.ico">
 <link rel="stylesheet" href="index_files/css/master.css">
 <link rel="stylesheet" href="index_files/css/responsive.css">
