Updating the code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Hi. I am Tarun Mahajan</title>
-<link rel="shortcut icon" href="index_files/images/favicon.ico">
+<link rel="shortcut icon" href="index_files/images/TLogo.png">
 <link rel="stylesheet" href="index_files/css/master.css">
 <link rel="stylesheet" href="index_files/css/responsive.css">
 </head>
@@ -65,7 +65,7 @@
   <!--=== Parallax Start ======-->
   <section class="pt-0 pb-0" id="home">
     <div class="full-screen-bg">
-      <div class="parallax-img" style="background: url(index_files/images/background/demo3.jpg) center center / cover scroll no-repeat;"></div>
+      <div class="parallax-img" style="background: url(index_files/images/background/demo3-min.jpg) center center / cover scroll no-repeat;"></div>
       <canvas></canvas>
       <div class="hero-text-wrap">
         <div class="hero-text white-color">
