--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Hi. I am Tarun Mahajan</title>
-<link rel="shortcut icon" href="index_files/images/TLogo.png" type="image/x-icon">
+<link rel="icon" href="index_files/images/TLogo.ico">
 <link rel="stylesheet" href="index_files/css/master.css">
 <link rel="stylesheet" href="index_files/css/responsive.css">
 </head>
