--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="index_files/css/master.css">
 <link rel="stylesheet" href="index_files/css/responsive.css">
 <link rel="stylesheet" href="index_files/css/about.css">
+<link rel="stylesheet" href="index_files/css/svgAnimate.css">
 </head>
 <body>
 
@@ -123,19 +124,19 @@
           <div class="progress">
             <div class="progress-bar" data-width="65"> <span>65%</span> </div>
           </div>
-          <div class="progress-bar-title">Mobile Application Development</div>
+          <div class="progress-bar-title">Mobile & Web Application Development</div>
           <div class="progress">
             <div class="progress-bar" data-width="85"> <span>85%</span> </div>
           </div>
           <div class="progress-bar-title">FullStack Application(JS)</div>
           <div class="progress">
-            <div class="progress-bar" data-width="80"> <span>8%</span> </div>
+            <div class="progress-bar" data-width="80"> <span>80%</span> </div>
           </div>
           <div class="progress-bar-title">Computer Vision</div>
           <div class="progress">
             <div class="progress-bar" data-width="55"> <span>55%</span> </div>
           </div>
-          <div class="progress-bar-title">IoT and Hardware Technologies</div>
+          <div class="progress-bar-title">IoT and Hardware</div>
           <div class="progress">
             <div class="progress-bar" data-width="70"> <span>70%</span> </div>
           </div>
@@ -143,8 +144,12 @@
           <div class="progress">
             <div class="progress-bar" data-width="45"> <span>45%</span> </div>
           </div>
+          <div class="progress-bar-title">Android</div>
+          <div class="progress">
+            <div class="progress-bar" data-width="50"> <span>50%</span> </div>
+          </div>
           <div class="">
-          	<h5>This graph is a representation of my current comfort level and skill in each language.</h5>
+          	<!-- <h5>This graph is a representation of my current comfort level and skill in each language.</h5> -->
           </div>
         </div>
         <div class="col-md-6">
@@ -167,12 +172,26 @@
             </div>
           </div> -->
           <div class="row" style="padding: 0 10% 0 10%;">
-          	<p style="font-size: 30px;">One of the things I love the most about coding is that you never stop learning.</p>
+              <!-- <svg viewBox='0 0 105 105'>
+                <path d='M 25,60 
+                         a 20,20 1 0,0 0,40 
+                         h 50 
+                         a 20,20 1 0,0 0,-40 
+                         a 10,10 1 0,0 -15,-10 
+                         a 15,15 1 0,0 -35,10  
+                         z' />
+              </svg> -->
+          	<!-- <p style="font-size: 30px; font-family: Cursive">One of the things I love the most about coding is that you never stop learning.</p> -->
+            <h2 id="hello_header" class="skill__title" style="text-indent: 0px;">One of the things I love the most about coding is that you never stop learning.</h2>
+          </div>
+          <div class="row" style="padding: 0 10% 0 10%;">
+            <h5>This graph is a representation of my current comfort level and skill in each language.</h5>
           </div>
         </div>
       </div>
       <div class="mt-30">
-      	<h3>(I believe there’s no way anyone could know even close to a 100% of any programming language)</h3>
+        <blockquote>I believe there’s no way anyone could know even close to a 100% of any programming language</blockquote>
+      	<!-- <h3 class="skill__title">I believe there’s no way anyone could know even close to a 100% of any programming language</h3> -->
       </div>
     </div>
   </section>
@@ -183,7 +202,7 @@
     <div class="container-fluid">
       <div class="row" align="center">
       	 <div class="section-heading">
-          <h3 class="text-uppercase">I have worked on all kind of projects, here is a sample of what I´ve done.</h3>
+          <h3 class="text-uppercase"><!-- I have worked on all kind of projects, --> here is a sample of what I´ve done.</h3>
             <!-- <div class="mt-30">
             	<p style="font-size: 20px;">I have worked on all kind of web projects, here is a sample of what I´ve done.</p>
             </div> -->
