--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="animate-caption">
               <h2 class="white-color mt-30"><span class="rotate">Hello | I m  | Mobile & Web App | Fullstack Developer | & | DIY Hobbyist</span></h2>
             </div>
-            <p class="text-center mt-30"><a class="btn btn-outline-white btn-circle">View Resume</a> <a class="btn btn-dark btn-circle">Hire Me</a></p>
+            <p class="text-center mt-30"><a class="btn btn-outline-white btn-circle" href="/Tarun_Mahajan">View Resume</a> <a class="btn btn-dark btn-circle" href="mailto:tarunm201412@gmail.com">Hire Me</a></p>
           </div>
         </div>
       </div>
@@ -212,108 +212,108 @@
         <div class="portfolio-container text-center">
           <ul id="portfolio-filter" class="list-inline filter-transparent">
             <li class="active" data-group="all">All</li>
-            <li data-group="design">Java & Desktop App</li>
-            <li data-group="web">Mobile & Web App</li>
-            <li data-group="branding">Machine Learning</li>
-            <li data-group="print">Hardware & IoT</li>
+            <li data-group="design">Hardware</li>
+            <li data-group="web">Software</li>
+            <!-- <li data-group="branding">Machine Learning</li>
+            <li data-group="print">Hardware & IoT</li> -->
           </ul>
           <ul id="portfolio-grid" class="three-column hover-two">
-            <li class="portfolio-item" data-groups='["all", "print", "branding"]'>
+            <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/grid/1.jpg" alt="">
+                <img src="index_files/images/portfolio/projects/1.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
-                    <h3 class="portfolio-title">Business Cards</h3>
-                    <a href="single-portfolio.html" class="links">Print Design</a> </div>
+                    <h3 class="portfolio-title">Slicing 3D</h3>
+                    <a href="projects/slicer.html" class="links">For 3D Softwares</a> </div>
                   <!--=== /.project-info ===-->
                   <ul class="portfolio-details">
-                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/grid/1.jpg"><i class="fa fa-search"></i></a></li>
+                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/projects/1.jpg"><i class="fa fa-search"></i></a></li>
                     <li><a href="single-portfolio.html"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </div>
               <!--=== /.portfolio ===-->
             </li>
-            <li class="portfolio-item" data-groups='["all", "branding", "web"]'>
+            <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/grid/2.jpg" alt="">
+                <img src="index_files/images/portfolio/projects/2.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
-                    <h3 class="portfolio-title">Magazine</h3>
-                    <a href="single-portfolio.html" class="links">Branding</a> </div>
+                    <h3 class="portfolio-title">Rubik's Cube JavaFX</h3>
+                    <a href="single-portfolio.html" class="links">3D View using JavaFX</a> </div>
                   <!--=== /.project-info ===-->
                   <ul class="portfolio-details">
-                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/grid/2.jpg"><i class="fa fa-search"></i></a></li>
+                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/projects/2.jpg"><i class="fa fa-search"></i></a></li>
                     <li><a href="single-portfolio.html"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </div>
               <!--=== /.portfolio ===-->
             </li>
-            <li class="portfolio-item" data-groups='["all", "branding"]'>
+            <li class="portfolio-item" data-groups='["all", "Hardware"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/grid/3.jpg" alt="">
+                <img src="index_files/images/portfolio/projects/3.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
-                    <h3 class="portfolio-title">Rabycad CD Design</h3>
-                    <a href="single-portfolio.html" class="links">Branding</a> </div>
+                    <h3 class="portfolio-title">Motor Control</h3>
+                    <a href="single-portfolio.html" class="links">Arduino</a> </div>
                   <!--=== /.project-info ===-->
                   <ul class="portfolio-details">
-                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/grid/3.jpg"><i class="fa fa-search"></i></a></li>
+                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/projects/3.jpg"><i class="fa fa-search"></i></a></li>
                     <li><a href="single-portfolio.html"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </div>
               <!--=== /.portfolio ===-->
             </li>
-            <li class="portfolio-item" data-groups='["all", "print", "design"]'>
+            <li class="portfolio-item" data-groups='["all", "Hardware", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/grid/4.jpg" alt="">
+                <img src="index_files/images/portfolio/projects/4.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
-                    <h3 class="portfolio-title">Micro Chips</h3>
-                    <a href="single-portfolio.html" class="links">Web Design</a> </div>
+                    <h3 class="portfolio-title">3D Printer & Robotic Arm</h3>
+                    <a href="single-portfolio.html" class="links">RepRap & Marlin</a> </div>
                   <!--=== /.project-info ===-->
                   <ul class="portfolio-details">
-                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/grid/4.jpg"><i class="fa fa-search"></i></a></li>
+                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/projects/4.jpg"><i class="fa fa-search"></i></a></li>
                     <li><a href="single-portfolio.html"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </div>
               <!--=== /.portfolio ===-->
             </li>
-            <li class="portfolio-item" data-groups='["all", "design"]'>
+            <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/grid/5.jpg" alt="">
+                <img src="index_files/images/portfolio/projects/5.png" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
-                    <h3 class="portfolio-title">Flyer</h3>
-                    <a href="single-portfolio.html" class="links">Print Design</a> </div>
+                    <h3 class="portfolio-title">Ionic Plugins for OpenCV</h3>
+                    <a href="single-portfolio.html" class="links">OpenCV on hybrid</a> </div>
                   <!--=== /.project-info ===-->
                   <ul class="portfolio-details">
-                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/grid/5.jpg"><i class="fa fa-search"></i></a></li>
+                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/projects/5.png"><i class="fa fa-search"></i></a></li>
                     <li><a href="single-portfolio.html"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
               </div>
               <!--=== /.portfolio ===-->
             </li>
-            <li class="portfolio-item" data-groups='["all", "design", "web"]'>
+            <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/grid/6.jpg" alt="">
+                <img src="index_files/images/portfolio/projects/6.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
-                    <h3 class="portfolio-title">Flat Web Design</h3>
-                    <a href="single-portfolio.html" class="links">Web Design</a> </div>
+                    <h3 class="portfolio-title">Web and Mobile app</h3>
+                    <a href="single-portfolio.html" class="links">JS Fullstack</a> </div>
                   <!--=== /.project-info ===-->
                   <ul class="portfolio-details">
-                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/grid/6.jpg"><i class="fa fa-search"></i></a></li>
+                    <li><a class="alpha-lightbox" href="index_files/images/portfolio/projects/6.jpg"><i class="fa fa-search"></i></a></li>
                     <li><a href="single-portfolio.html"><i class="fa fa-link"></i></a></li>
                   </ul>
                 </div>
@@ -328,7 +328,7 @@
   <!--=== Portfolio End ======-->
   
   <!--=== Resume Start ======-->
-  <section class="dark-bg" id="resume">
+  <!-- <section class="dark-bg" id="resume">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 section-heading white-color">
@@ -339,8 +339,7 @@
       <div class="row mt-50">
         <div class="col-md-12">
           <h3 class="mt-10 raleway-font font-700 text-uppercase">Experience</h3>
-          <p class="white-color">Mauris quis venenatis mauris. Nullam vel commodo velit. Cras purus risus, congue sed ornare id,<br>
-            vulputate mollis elit.</p>
+          <p class="white-color">My passion is my work and my success is what I enjoy.</p>
           <ul class="resume-slider owl-carousel">
             <li>
               <h3><i class="fa fa-calendar-o"></i> 2013-2016</h3>
@@ -403,7 +402,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--=== Resume End ======-->
   
   <!--=== Contact Us Start ======-->
