--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="animate-caption">
               <h2 class="white-color mt-30"><span class="rotate">Hello | I m  | Mobile & Web App | Fullstack Developer | & | DIY Hobbyist</span></h2>
             </div>
-            <p class="text-center mt-30"><a class="btn btn-outline-white btn-circle" href="/Tarun_Mahajan">View Resume</a> <a class="btn btn-dark btn-circle" href="mailto:tarunm201412@gmail.com">Hire Me</a></p>
+            <p class="text-center mt-30"><a class="btn btn-outline-white btn-circle" href="/Tarun_Mahajan.pdf">View Resume</a> <a class="btn btn-dark btn-circle" href="mailto:tarunm201412@gmail.com">Hire Me</a></p>
           </div>
         </div>
       </div>
