--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <div class="portfolio-container text-center">
           <ul id="portfolio-filter" class="list-inline filter-transparent">
             <li class="active" data-group="all">All</li>
-            <li data-group="design">Hardware</li>
-            <li data-group="web">Software</li>
+            <li data-group="Hardware">Hardware</li>
+            <li data-group="Software">Software</li>
             <!-- <li data-group="branding">Machine Learning</li>
             <li data-group="print">Hardware & IoT</li> -->
           </ul>
