--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu" aria-expanded="false"> <i class="fa fa-bars"></i> </button>
           <a class="logo navbar-brand" href="">
-            <img src="index_files/images/TLogo6.png" class="logo" alt="">
+            <img src="index_files/images/TLogo6.png" class="logo lazy" alt="">
             <!-- <h2 class="logo" style="font-weight: 1000; padding-bottom: 10%">TARUN</h2> -->
           </a>
         </div>
@@ -91,7 +91,7 @@
   	<!-- <div class="container"> -->
       <div class="row">
         <div class="col-sm-4">
-          <img src="index_files/images/innovator.gif">
+          <img class="lazy" src="index_files/images/innovator.gif">
         </div>
         <div class="col-sm-8 section-heading">
           <h2 class="text-uppercase">About Me</h2>
@@ -221,7 +221,7 @@
             <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/projects/1.jpg" alt="">
+                <img class="lazy" src="index_files/images/portfolio/projects/1.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
                     <h3 class="portfolio-title">Slicing 3D</h3>
@@ -238,7 +238,7 @@
             <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/projects/2.jpg" alt="">
+                <img class="lazy" src="index_files/images/portfolio/projects/2.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
                     <h3 class="portfolio-title">Rubik's Cube JavaFX</h3>
@@ -255,7 +255,7 @@
             <li class="portfolio-item" data-groups='["all", "Hardware"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/projects/3.jpg" alt="">
+                <img class="lazy" src="index_files/images/portfolio/projects/3.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
                     <h3 class="portfolio-title">Motor Control</h3>
@@ -272,7 +272,7 @@
             <li class="portfolio-item" data-groups='["all", "Hardware", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/projects/4.jpg" alt="">
+                <img class="lazy" src="index_files/images/portfolio/projects/4.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
                     <h3 class="portfolio-title">3D Printer & Robotic Arm</h3>
@@ -289,7 +289,7 @@
             <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/projects/5.png" alt="">
+                <img class="lazy" src="index_files/images/portfolio/projects/5.png" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
                     <h3 class="portfolio-title">Ionic Plugins for OpenCV</h3>
@@ -306,7 +306,7 @@
             <li class="portfolio-item" data-groups='["all", "Software"]'>
               <div class="portfolio gallery-image-hover">
                 <div class="dark-overlay"></div>
-                <img src="index_files/images/portfolio/projects/6.jpg" alt="">
+                <img class="lazy" src="index_files/images/portfolio/projects/6.jpg" alt="">
                 <div class="portfolio-wrap">
                   <div class="portfolio-description">
                     <h3 class="portfolio-title">Web and Mobile app</h3>
@@ -583,3 +583,10 @@ loop();
 
 </body>
 </html>
+
+
+<script src="jquery.js" type="text/javascript"></script>
+<script src="jquery.lazyload.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$("img.lazy").lazyload();
+</script>
