Lazy loading images

--- a/index.html
+++ b/index.html
@@ -580,13 +580,12 @@ loop();
 //# sourceURL=pen.js
 </script>
 <!--=== Javascript Plugins End ======-->
+<script src="index_files/js/jquery.js" type="text/javascript"></script>
+<script src="index_files/js/jquery.lazyload.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$("img.lazy").lazyload();
+</script>
 
 </body>
 </html>
 
-
-<script src="jquery.js" type="text/javascript"></script>
-<script src="jquery.lazyload.js" type="text/javascript"></script>
-<script type="text/javascript">
-	$("img.lazy").lazyload();
-</script>
