--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
 <link rel="stylesheet" href="index_files/css/responsive.css">
 <link rel="stylesheet" href="index_files/css/about.css">
 <link rel="stylesheet" href="index_files/css/svgAnimate.css">
+
+<script src="index_files/js/jquery.lazy-master/jquery.lazy.min.js" type="text/javascript"></script>
+<script src="index_files/js/jquery.lazy-master/jquery.lazy.plugins.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$(".lazy").lazyload();
+	// $(function() {
+	//   $('.lazy').lazy(
+	// {
+	//         effect: "fadeIn",
+	//         effectTime: 2000,
+	//         threshold: 0,
+	//         onError: function(element) {
+	//             console.log('Error loading ' + element.data('src'));
+	//         }
+	//   });
+	// });
+</script>
+
+
 </head>
 <body>
 
@@ -38,7 +57,7 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu" aria-expanded="false"> <i class="fa fa-bars"></i> </button>
           <a class="logo navbar-brand" href="">
-            <img src="index_files/images/TLogo6.png" class="logo lazy" alt="">
+            <img class="lazy logo" src="index_files/images/TLogo6.png" alt="">
             <!-- <h2 class="logo" style="font-weight: 1000; padding-bottom: 10%">TARUN</h2> -->
           </a>
         </div>
@@ -68,7 +87,7 @@
   <!--=== Parallax Start ======-->
   <section class="pt-0 pb-0" id="home">
     <div class="full-screen-bg">
-      <div class="parallax-img" style="background: url(index_files/images/background/bgimage.jpg) center center / cover scroll no-repeat;"></div>
+      <div class="lazy parallax-img" style="background: url(index_files/images/background/bgimage.jpg) center center / cover scroll no-repeat;"></div>
       <canvas></canvas>
       <div class="hero-text-wrap">
         <div class="hero-text white-color">
@@ -78,7 +97,7 @@
             <div class="animate-caption">
               <h2 class="white-color mt-30"><span class="rotate">Hello | I m  | Mobile & Web App | Fullstack Developer | & | DIY Hobbyist</span></h2>
             </div>
-            <p class="text-center mt-30"><a class="btn btn-outline-white btn-circle" href="/Tarun_Mahajan.pdf"  target="_blank">View Resume</a> <a class="btn btn-dark btn-circle" href="mailto:tarunm201412@gmail.com">Hire Me</a></p>
+            <p class="text-center mt-30"><a class="btn btn-outline-white btn-circle" href="/Tarun_Mahajan.pdf" target="_blank">View Resume</a> <a class="btn btn-dark btn-circle" target="_top" href="mailto:tarunm201412@gmail.com">Hire Me</a></p>
           </div>
         </div>
       </div>
@@ -457,6 +476,11 @@
           </ul>
         </div>
       </div>
+      <br>
+      <div class="row" align="center" style="font-size: 20px;">
+        &#x2713;   <i><b>Bravo!</b></i>&nbsp&nbsp This website is made by <i><b>ME</b></i>.
+        <br>If you like my work, feel free to contact me.
+      </div>
     </div>
   </section>
 
@@ -580,12 +604,6 @@ loop();
 //# sourceURL=pen.js
 </script>
 <!--=== Javascript Plugins End ======-->
-<script src="index_files/js/jquery.js" type="text/javascript"></script>
-<script src="index_files/js/jquery.lazyload.js" type="text/javascript"></script>
-<script type="text/javascript">
-	$("img.lazy").lazyload();
-</script>
 
 </body>
 </html>
-
