--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </div>
       <div class="row mt-50">
         <div class="col-md-6 resume-bar">
-          <div class="progress-bar-title">Machine Learning & AI</div>
+          <div class="progress-bar-title">Machine Learning, DL & AI</div>
           <div class="progress">
             <div class="progress-bar" data-width="75"> <span>75%</span> </div>
           </div>
@@ -435,7 +435,8 @@
       </div>
       <div class="row mt-50">
         <div class="col-sm-12 col-md-offset-2 col-md-8">
-          <form name="contact-form" class="contact-me" id="contact-form" action="php/contact.php" method="POST">
+          <form name="contact-form" class="contact-me" id="contact-form" action="php/contact.php" method="POST"
+          action="https://script.google.com/macros/s/AKfycbz-jEB8UnL59UBZj6Qd2Mtp_LjDjEzkHUMvqmJ3Bw/exec">
             <div class="messages"></div>
             <div class="form-group">
               <label class="sr-only" for="name">Name</label>
