Contact page itteration 2

--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
             </div>
             <p class="text-center">
               <button type="submit" name="submit" class="btn btn-color btn-circle">Send Request <i class="mdi mdi-email"></i></button>
+              <!-- <input type="submit" value="Submit"> -->
             </p>
           </form>
         </div>
@@ -604,7 +605,8 @@ function draw() {
 loop();
 //# sourceURL=pen.js
 </script>
+<script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 <!--=== Javascript Plugins End ======-->
-
 </body>
 </html>
