Contact page itteration 3

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       </div>
       <div class="row mt-50">
         <div class="col-sm-12 col-md-offset-2 col-md-8">
-          <form name="contact-form" class="contact-me" id="contact-form" action="php/contact.php" method="POST"
+          <form name="contact-form" class="contact-me" id="gform" action="php/contact.php" method="POST"
           action="https://script.google.com/macros/s/AKfycbz-jEB8UnL59UBZj6Qd2Mtp_LjDjEzkHUMvqmJ3Bw/exec">
             <div class="messages"></div>
             <div class="form-group">
@@ -605,8 +605,8 @@ function draw() {
 loop();
 //# sourceURL=pen.js
 </script>
-<script data-cfasync="false" type="text/javascript"
-src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
+<!-- <script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> -->
 <!--=== Javascript Plugins End ======-->
 </body>
 </html>
