--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@ function draw() {
 loop();
 //# sourceURL=pen.js
 </script>
-<!-- <script data-cfasync="false" type="text/javascript"
-src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> -->
+<script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 <!--=== Javascript Plugins End ======-->
 </body>
 </html>
