Contact function completed. Correction 1

--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
 <script src="index_files/js/plugins.js"></script>
 <script src="index_files/js/master.js"></script>
 <script src="index_files/js/bootsnav.js"></script>
-<script data-cfasync="false" type="text/javascript"
-src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
+<!-- <script data-cfasync="false" type="text/javascript"
+src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> -->
 <script>
 var canvas = document.querySelector("canvas");
 canvas.width = canvas.clientWidth;
