--- a/confirmation.html
+++ b/confirmation.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Confirmation Page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Designsninja">
+<!-- description -->
+<meta name="description" content="Arcon Studio High Quality Multi Purpose HTML5 Template based on bootstrap 3. With 20+ different home page layouts, 75+ Html files included Best Idea for small Business And High Resolution Images and google fonts.">
+<!-- keywords -->
+<meta name="keywords" content="creative, fullscreen, business, photography, portfolio, one page, bootstrap responsive, start-up, ui/ux, html5, css3, studio, branding, creative design, multipurpose, parallax, personal, masonry, grid, coming soon, carousel, career">
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Confirmation page</title>
+<link rel="icon" href="index_files/images/TLogo.ico">
+<link rel="stylesheet" href="index_files/css/master.css">
+<link rel="stylesheet" href="index_files/css/responsive.css">
+<link rel="stylesheet" href="index_files/css/about.css">
+<link rel="stylesheet" href="index_files/css/svgAnimate.css">
+
+<script src="index_files/js/jquery.lazy-master/jquery.lazy.min.js" type="text/javascript"></script>
+<script src="index_files/js/jquery.lazy-master/jquery.lazy.plugins.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<div>
-		<h1>Confirmation Page</h1>
-	</div>
+
+<!--=== Loader Start ======-->
+<div id="loader-overlay">
+  <div class="loader-wrapper">
+    <div class="arcon-pulse"></div>
+  </div>
+</div>
+<!--=== Loader End ======-->
+
+<!--=== Wrapper Start ======-->`
+<div class="wrapper">
+
+  <!--=== Header Start ======-->
+  <nav class="navbar navbar-default navbar-sidebar bootsnav" data-minus-value-desktop="0" data-minus-value-mobile="0" data-speed="1000">
+    <div class="scroller">
+      <div class="container">
+        <!--=== Start Header Navigation ===-->
+        <div class="navbar-header">
+          <a class="logo navbar-brand" href="">
+            <img class="lazy logo" src="index_files/images/TLogo6.png" alt="">
+            <!-- <h2 class="logo" style="font-weight: 1000; padding-bottom: 10%">TARUN</h2> -->
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!--=== Header End ======-->
+  
+  <!-- About Me -->
+  <section class="main-section" id="about" style="background-color: #ffffff;">
+  	<!-- <div class="container"> -->
+      <div class="row">
+        <div class="col-sm-4">
+          <img class="lazy" src="index_files/images/innovator.gif">
+        </div>
+        <div class="col-sm-8 section-heading">
+          <h2 class="text-uppercase">Thank You.</h2>
+          <div class="mt-30">
+            <p style="font-size: 20px;">I have received your messag. 
+            	I will reply you as soon as possible.
+            	<!-- <br>I am eager to meet you -->
+            	<br>Good luck.
+            </p>
+          </div>
+        </div>
+      </div>
+  	<!-- </div> -->
+  </section>
+  <!-- About Me -->
+
+  <!--=== Footer Start ======-->
+  <section class="dark-bg flat-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <ul class="social-media">
+            <li><a href="#" class="fa fa-facebook"></a></li>
+            <!-- <li><a href="#" class="fa fa-dribbble"></a></li> -->
+            <li><a href="https://github.com/MahajanTarun" class="fa fa-github"></a></li>
+            <!-- <li><a href="#" class="fa fa-instagram"></a></li> -->
+            <li><a href="https://www.linkedin.com/in/tarunmahajan2017/" class="fa fa-linkedin"></a></li>
+          </ul>
+        </div>
+      </div>
+      <br>
+      <div class="row" align="center" style="font-size: 20px;">
+        &#x2713;   <i><b>Bravo!</b></i>&nbsp&nbsp This website is made by <i><b>ME</b></i>.
+        <br>If you like my work, feel free to contact me.
+      </div>
+    </div>
+  </section>
+
+  <!-- <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="tarunmahajan2017"><a class="LI-simple-link" href='https://in.linkedin.com/in/tarunmahajan2017?trk=profile-badge'>Tarun Mahajan</a></div> -->
+  <!--=== Footer End ======-->
+  
+
+<!--=== Wrapper End ======-->
+
+<!--=== Javascript Plugins ======-->
+<script src="index_files/js/jquery.min.js"></script>
+<script src="index_files/js/smoothscroll.js"></script>
+<script src="index_files/js/validator.js"></script>
+<script src="index_files/js/plugins.js"></script>
+<script src="index_files/js/master.js"></script>
+<script src="index_files/js/bootsnav.js"></script>
+<!--=== Javascript Plugins End ======-->
 </body>
 </html>
