--- a/confirmation.html
+++ b/confirmation.html
@@ -59,7 +59,7 @@
         <div class="col-sm-8 section-heading">
           <h2 class="text-uppercase">Thank You.</h2>
           <div class="mt-30">
-            <p style="font-size: 20px;">I have received your messag. 
+            <p style="font-size: 20px;">I have received your message. &nbsp;
             	I will reply you as soon as possible.
             	<!-- <br>I am eager to meet you -->
             	<br>Good luck.
