--- a/index.html
+++ b/index.html
@@ -464,6 +464,12 @@
 		    <button type="submit" name="submit" class="btn btn-color btn-circle g-recaptcha" data-sitekey="6Lcbjt4UAAAAACHjxtJR9MEj17RbWIoVCNcYP8dx" data-callback='onSubmit' >Send Request <i class="mdi mdi-email"></i></button>
               <!-- <input type="submit" value="Submit"> -->
             </p>
+	   <div class="form-group">
+                <div>
+			<h2>The submit button is disabled for now. Work is going on to include security check. This is to prevent anonymous email to flood my inbox</h2>
+			<h1>Bots, Advertisers and other SPAM mailers - Beware. I am also a part-time Ethical Hacker &#128520;</h1>
+		</div>
+            </div>
           </form>
         </div>
       </div>
