Forms removed. Only UI exist

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
       </div>
       <div class="row mt-50">
         <div class="col-sm-12 col-md-offset-2 col-md-8">
-          <form name="contact-form" class="contact-me" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbz-jEB8UnL59UBZj6Qd2Mtp_LjDjEzkHUMvqmJ3Bw/exec">
+          <form name="contact-form" class="contact-me">
             <div class="messages"></div>
             <div class="form-group">
               <label class="sr-only" for="name">Name</label>
